--- a/core/templates/blogvip_flow.html
+++ b/core/templates/blogvip_flow.html
@@ -10,7 +10,10 @@
      <link rel="stylesheet" href="{% url static 'css/event_css/' %}{{css}}" type="text/css" >
 {% endif %}
 
+ 	<link rel="stylesheet" href="{% url static 'css/style.css' %}" type="text/css" >
+	<link rel="stylesheet" href="{% url static 'css/2stylez.css' %}" type="text/css" >
 
+	<link rel="stylesheet" href="{% url static 'css/2home.css' %}" type="text/css" >
 {% endblock %}
 
 
