--- a/core/templates/header.html
+++ b/core/templates/header.html
@@ -1,13 +1,12 @@
-<div class="span-19">&nbsp;</div>
+    <div id="header">
+	<div id ="f">
+	  <div id="links">
+            <a href="#">Get CollectiveVIP</a> &nbsp;&nbsp; 
+	    <a href="#">How it Works</a> &nbsp;&nbsp; 
+	    <a href="#">Contact</a>
+	  </div>
 
-
-{% block login%}
-{% if user %}
-<div class="logout"><a href="{% url tauth_logout %}">logout, {{user.username}} <img src="{{user.profile_pic}}" /></a></div>
-{% else %}
-<div class="logout"><a href="{% url tauth_login %}"><img src="{% url static 'images/twitter_button_5_lo.gif' %}" /></a><br/><br/></div>
-{% endif %}
-{% endblock %}
-
-
-
+	</div>
+	<!-- End f -->
+    </div>
+    <!-- END header -->
