--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -1,5 +1,5 @@
 <!-- END main -->
-<div class="footer">
-	<p>Copyright CollectiveVIP 2010</p>
+<div id="footer">
+	Copyright CollectiveVIP 2010
 </div>
 <!-- END footer -->
