--- a/static/css/top-site-base.css
+++ b/static/css/top-site-base.css
@@ -7,35 +7,29 @@ html, body {
     height: 100%;
 }
 
-.wrapper {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%; 
-    margin: 0 auto -4em;
+#container {
+    position:relative;
+    min-height:100%;
+    _height:100%; /* for IE6 as it doesnt understand min-height */
+}
+
+#content {
+	 padding-bottom: 100px;
 }
 
 
-.footer {
-    height: 20px;
-    text-align: center;	
-    font-size: 14px;	
-    margin: auto;
-    padding-top: 34px;
-    font-weight: bold;
-    background-color: gray;
+#footer {
+    position: relative;	
+   # margin-top:-100px;
+   
 }
 
-#header #links
-{
-	position: absolute;
-}
 #main, #header
 {
 	background-image: url(../images/look/body-bg.png);
 }
 #header, #header #f
 {
-/*	height: 616px; */
 	position: relative;
 }
 #header #f
