--- a/core/templates/header.html
+++ b/core/templates/header.html
@@ -1,12 +1,9 @@
     <div id="header">
-	<div id ="f">
-	  <div id="links">
+		<div id ="logo"><img src="{% url static 'images/cv_logo.png' %}"></div>
+	  	<div id="links">
             <a href="#">Get CollectiveVIP</a> &nbsp;&nbsp; 
-	    <a href="#">How it Works</a> &nbsp;&nbsp; 
-	    <a href="#">Contact</a>
-	  </div>
-
-	</div>
-	<!-- End f -->
+	    	<a href="#">How it Works</a> &nbsp;&nbsp; 
+	    	<a href="#">Contact</a>
+	  	</div>
     </div>
     <!-- END header -->
