--- a/static/css/create.css
+++ b/static/css/create.css
@@ -13,24 +13,8 @@ div#create-thanks p{
 
 }
 
-#div#create-event {
-#		  position: relative;
-#		  top: 185px;
-#		  left: 70px;
-#}
-
-div#create-event h1 {
-
-		  font-size: 45px;
-		  margin: 0px 0px 40px 0px;
-		  color: white;
-
-}
 
 
-div#create-event li {
-		 margin: 30px;
-}
 
 div#create-event label {
 		 font-size: 18px;
@@ -40,7 +24,7 @@ div#create-event label {
 
 div.create {
     padding: 20px;		  
-    text-align: center;
+    text-align: left;
     width: 80%;
     background-color: #CCCCFF;
     margin: auto;
@@ -54,13 +38,27 @@ div.create {
     -webkit-border-bottom-left-radius: 20px;
     -moz-border-radius-bottomright: 20px;
     -webkit-border-bottom-right-radius: 20px;
-    margin-bottom: 100px;
+    margin-bottom: 30px;
     margin-top: 100px;
 }
 
+div#create-campaign {
+	margin-top: 0px;
+}
+
+
 div.create li {
 	   list-style: none;
+		 margin: 30px;	
 }
+
+div.create h1 {
+	   text-align:center;
+		  font-size: 45px;
+		  margin: 0px 0px 40px 0px;
+		  color: white;
+}
+
 
 div#address_map {
 		height: 400px;
@@ -69,6 +67,7 @@ div#address_map {
 
 div#choose-create-entity {
      height: 100px;
+     text-align: center;
 }
 
 
