Commitig changes to the create look process.

--- a/core/templates/404.html
+++ b/core/templates/404.html
@@ -1,10 +1,10 @@
-{% extends "event_base.html" %}
+{% extends "site_base.html" %}
 
 {% block title %}
 Page not found.
 {% endblock %}
 
-{% block content %} 
+{% block site-content %} 
 
 <h1>Page not found.</h1>
 
