--- a/core/templates/create.html
+++ b/core/templates/create.html
@@ -499,7 +499,8 @@ $(document).ready(function() {
 			type: "POST",
 			data: values, 
 		success: function(data){
-			alert("data returned", data);
+			alert("data returned " + data);
+			window.location.href = "{% url campaign_created %}?chash=" + data.campaign_hash; 
 					},
 		beforeSend: function() {
 			alert("sending data");
