--- a/core/templates/campaign_created.html
+++ b/core/templates/campaign_created.html
@@ -1,8 +1,36 @@
 {% extends "site_base.html" %}
 
+	{% block  js_css_include %}
+ 	<link rel="stylesheet" href="{% url static 'css/create.css' %}" type="text/css" >
+	{% endblock %}
+
 {% block title %}Welcome! Campaign Created.{% endblock %}
 
 
 {% block site-content %}
-Campaign Created!
+<h1>Campaign Created!</h1>
+
+<div id="create-thanks">
+<p>Campaign Created, Thanks..</p>
+
+<a href="{% url campaign_page chash=campaign.chash %}">Campaign Page</a>
+
+<br /><br />
+
+{% if event %}
+<a href={% url event_blogvip_flow %}?event={{event.id}} >{{ event.name }}</a> <br />
+Event Id: {{ event.id }} <br />
+Description: {{event.description}} <br />
+Start Time: {{event.event_date_time_start}} <br />
+End Time: {{event.event_date_time_end}} <br />
+Capacity: {{event.capacity}} <br />
+Venue: {{event.venue }} <br />
+Venue Address: {{event.venue_address}} <br />
+Organizer: {{event.organizer_id}} <br />
+
+Admin Url: <a href='{% url analytics %}?event={{event.id}}'>Admin Analytics</a>
+
+{% endif %}
+</div>
+
 {% endblock %}
