--- a/static/css/create.css
+++ b/static/css/create.css
@@ -9,7 +9,7 @@ div#create-thanks p{
 
 		  font-size: 30px;
 		  margin: 65px 0px 140px 40px;
-		  color: white;
+		  color: #333;
 
 }
 
@@ -26,7 +26,8 @@ div.create {
     padding: 20px;		  
     text-align: left;
     width: 80%;
-    background-color: #CCCCFF;
+    #background-color: #CCCCFF;
+    background-color: #eee;
     margin: auto;
 
     -moz-border-radius-topleft: 20px;
@@ -39,7 +40,10 @@ div.create {
     -moz-border-radius-bottomright: 20px;
     -webkit-border-bottom-right-radius: 20px;
     margin-bottom: 30px;
-    margin-top: 100px;
+    margin-top: 60px;
+   
+   -moz-box-shadow: 10px 10px 10px #666;
+   -webkit-box-shadow: 10px 10px 10px #666;		
 }
 
 div#create-campaign {
@@ -56,7 +60,7 @@ div.create h1 {
 	   text-align:center;
 		  font-size: 45px;
 		  margin: 0px 0px 40px 0px;
-		  color: white;
+		  color: #333;
 }
 
 
