--- a/static/css/create.css
+++ b/static/css/create.css
@@ -26,9 +26,10 @@ div.create {
     padding: 20px;		  
     text-align: left;
     width: 80%;
-    #background-color: #CCCCFF;
-    background-color: #eee;
+    background-color: white;
+    #background-color: #eee;
     margin: auto;
+    border: 2px solid #CCC;
 
     -moz-border-radius-topleft: 20px;
     -webkit-border-top-left-radius: 20px;
@@ -42,8 +43,8 @@ div.create {
     margin-bottom: 30px;
     margin-top: 60px;
    
-   -moz-box-shadow: 10px 10px 10px #666;
-   -webkit-box-shadow: 10px 10px 10px #666;		
+   -moz-box-shadow: 10px 10px 10px #999;
+   -webkit-box-shadow: 10px 10px 10px #999;		
 }
 
 div#create-campaign {
