--- a/static/css/2home.css
+++ b/static/css/2home.css
@@ -34,10 +34,23 @@
 	font-size:12px;
 	font-weight: bold;
 }
+
 #header #invite-button
 {
-	top: 330px;
-	width: 460px;
+       #-moz-border-radius: 10px;
+       -webkit-border-radius: 0px 0px 5px 5px;
+       #border: 3px solid #a9a9a9;
+      box-shadow: 0 0 10px #000000;
+      #-moz-box-shadow: 0 0 10px #000000;
+      -webkit-box-shadow: 0 0 10px #000000;
+
+      margin-left: 6px;
+      height: 32px;
+    
+        padding-top: 6px;
+	top: 319px;
+	width: 455px;
+	#width: 460px;
 	text-align: center;
 	font-size: 16px;
 	font-weight: bold;
@@ -179,3 +192,5 @@ img
 	top: 62px;
 	left: 0px;
 	}
+
+
