--- a/core/templates/blogvip_flow.html
+++ b/core/templates/blogvip_flow.html
@@ -34,7 +34,7 @@
 </div>
 
 
-<div id="invite-button" onmouseover="$('#invite-button').stop().animate({shadow: '0 0 30px #44f'})" onmouseout="$('#invite-button').stop().animate({shadow: '0 0 10px #000'})">
+<div id="invite-button-div" onmouseover="$('#invite-button-div').stop().animate({shadow: '0 0 30px #44f'})" onmouseout="$('#invite-button-div').stop().animate({shadow: '3px 3px 10px #000'})" rel="#overlay-blogger-login">
 	<a href="" id="invite_button" rel="#overlay-blogger-login" style="font-size: 22px;color: red;">Share this to get your discount</a>
 </div>
 
@@ -202,6 +202,11 @@
 
 <script>
 $(document).ready(function() {
+
+$("#invite-button-div").click(function(){
+      $("#invite_button").overlay().load();
+});       
+
         var contentView = 0;
 
 	$("#invite_button").overlay(
