--- a/static/css/2home.css
+++ b/static/css/2home.css
@@ -46,7 +46,7 @@
 
       margin-left: 6px;
       height: 32px;
-    
+    cursor: pointer;
         padding-top: 6px;
 	top: 319px;
 	width: 455px;
