--- a/static/css/create.css
+++ b/static/css/create.css
@@ -47,6 +47,21 @@ div.create {
    -webkit-box-shadow: 10px 10px 10px #999;		
 }
 
+#campaign_url {
+	      font-size: 30px;
+	      text-align: center;
+              color: #E0E0E0; 
+              font-weight: bold;
+
+	      width: 600px;
+	      height: 50px;
+}
+#create-button {
+	       height: 40px;
+	       width: 100px;
+	       margin: 0 0 130px 0;
+}
+
 div#create-campaign {
 	margin-top: 0px;
 }
@@ -71,7 +86,7 @@ div#address_map {
 }
 
 div#choose-create-entity {
-     height: 100px;
+     height: 150px;
      text-align: center;
 }
 
