--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -26,7 +26,7 @@
 <h1>Running Campaign</h1>
 <br /><br /><br />
 
-<iframe src ="{{campaign.url}}" width="100%" height="600">
+<iframe src ="{{campaign.url}}" width="100%" height="600" scrolling="auto">
   <p>Your browser does not support iframes.</p>
 </iframe>
 
