--- a/frontpage/templates/frontpage.html
+++ b/frontpage/templates/frontpage.html
@@ -1,19 +1,30 @@
-<html>
-
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta http-equiv="Content-Style-Type" content="text/css">
-<title>CollectiveVIP - Beta</title>
-<link type="text/css" href="{% url static 'css/frontpage_style.css' %}" rel="stylesheet">
+<HTML>
+<HEAD>
+	<TITLE>Ripple Function</TITLE>
+	<meta name="author" content="">
+	<meta name="description" content="">
+	<meta name="keywords" content="">
+	<link type="text/css" href="{% url static 'css/frontpage_style.css' %}" rel="stylesheet">
 </head>
 
-<body>
-<img class="displayed" src="{% url static 'images/frontpage_collective_logo.jpeg' %}">
-<div class="centered">
-<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="545" height="431" id="viddler_7c6b3c26"><param name="movie" value="http://www.viddler.com/simple/7c6b3c26/" /><param name="allowScriptAccess" value="always" /><param name="allowFullScreen" value="true" /><embed src="http://www.viddler.com/simple/7c6b3c26/" width="545" height="431" type="application/x-shockwave-flash" allowScriptAccess="always" allowFullScreen="true" name="viddler_7c6b3c26"></embed></object>
-
-
+<BODY>
+<div id="container">
+	<div id="toplinks">
+	<a href="#">Get Ripple Function</a> &nbsp; | &nbsp; <a href="#">How it Works</a> &nbsp; | &nbsp; <a href="#">Contact</a>
+	</div>
+<BR><BR><BR><BR>
+	<div id="content">
+		<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="437" height="315" id="viddler_8ec82587"><param name="movie" value="http://www.viddler.com/player/8ec82587/" /><param name="allowScriptAccess" value="always" /><param name="allowFullScreen" value="true" /><embed src="http://www.viddler.com/player/8ec82587/" width="437" height="315" type="application/x-shockwave-flash" allowScriptAccess="always" allowFullScreen="true" name="viddler_8ec82587"></embed></object>	</div>
+	
+	<div id="footer">
+		<div id="dets">
+			<a href="#">About</a> &nbsp; 
+			<a href="#">Privacy Policy</a>
+		</div>
+		<div id="copyright">
+			Copyright Ripple Function 2010. 
+		</div>
+	</div>
 </div>
-
-</body>
-</html>
+</BODY>
+</HTML>
