--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -8,23 +8,200 @@
 	<script type="text/javascript" src="{% url static 'javascript/jquery.uploadify.js' %}"> </script>
 	<script type="text/javascript" src="{% url static 'javascript/jquery.validate.js' %}"> </script>
 	<script type="text/javascript" src="{% url static 'javascript/myjscript.js' %}"> </script>
+        <script type="text/javascript" src="{% url static 'javascript/jquery.cookie.js' %}" ></script>
+        <script type="text/javascript" src="{% url static 'javascript/charCount.js' %}" ></script>
 
 
-	<link rel="stylesheet" href="{% url static 'css/calendar-system.css' %}" type="text/css" >
-	<link rel="stylesheet" href="{% url static 'css/calendar-en.css' %}" type="text/css" >
-	<link rel="stylesheet" href="{% url static 'css/jquery.calendar.css' %}" type="text/css" >
-	<link rel="stylesheet" href="{% url static 'css/jquery.ptTimeSelect.css' %}" type="text/css" >	
+	<link rel="stylesheet" href="{% url static 'css/calendar-system.css' %}" type="text/css" />
+	<link rel="stylesheet" href="{% url static 'css/calendar-en.css' %}" type="text/css" />
+	<link rel="stylesheet" href="{% url static 'css/jquery.calendar.css' %}" type="text/css" />
+	<link rel="stylesheet" href="{% url static 'css/jquery.ptTimeSelect.css' %}" type="text/css" />	
 	<link type="text/css" href="{% url static 'css/jquery-ui-1.8.1.custom.css' %}" rel="Stylesheet" />
 
- 	<link rel="stylesheet" href="{% url static 'css/campaign_page.css' %}" type="text/css" >
+        <link rel="stylesheet" href="{% url static 'css/overlay.css' %}" type="text/css" />
+ 	<link rel="stylesheet" href="{% url static 'css/style.css' %}" type="text/css" />
+	<link rel="stylesheet" href="{% url static 'css/2stylez.css' %}" type="text/css" />
+	<link rel="stylesheet" href="{% url static 'css/2home.css' %}" type="text/css" />  
+
+
+ 	<link rel="stylesheet" href="{% url static 'css/campaign_page.css' %}" type="text/css" />
 {% endblock %} 
 
-{% block title %}Create{% endblock %}
+{% block title %}{{campaign.title}}{% endblock %}
 
 {% block site-content %}
 
 <h1>Running Campaign</h1>
 <br /><br /><br />
+
+
+
+
+
+<div id="greeting">
+	{{campaign.from_name}}'s offer to you and your friends:
+	<div id="status"></div>
+</div>
+
+<div id="invite-button-div" onmouseover="$('#invite-button-div').stop().animate({shadow: '0 0 30px #44f'}, 'fast')" onmouseout="$('#invite-button-div').stop().animate({shadow: '3px 3px 10px #000'}, 'fast')" rel="#overlay-blogger-login">
+	<a href="" id="invite_button" rel="#overlay-blogger-login" style="font-size: 22px;color: red;">Share this to get your discount</a>
+</div>
+
+<div id="invitemsg">{{campaign.percent}}% OFF ADMISSION TO {{event.name|upper}}</div>
+
+
+<div id="overlay-blogger-login" class="overlay-blogger">
+
+	<div id="overlay-div-content1">
+		<div class="overlay-top">
+			<img src="{% url static 'images/step1-msg.png' %}">
+		</div>
+		
+		<div id="pick-msg">{% block custom-message %} To get your discount, share {{campaign.from_name}}'s offer with your friends on Facebook or Twitter, choose one:{% endblock %}</div>
+		<div class="overlay-bot">
+			<div id="previous-grey"><img src="{% url static 'images/previous-grey.png' %}"></div>
+			<div id="invite-progress"><img src="{% url static 'images/step1.png' %}"></div>
+			<div id="next-grey"><img src="{% url static 'images/next-grey.png' %}"></div>
+		</div>
+		<BR /><BR />
+
+		<div id="overlay-div-facebook-login">
+			<script src="http://connect.facebook.net/en_US/all.js"></script>
+			
+			<div id="fb-root"></div>
+			<!--<button id="status_button">STATUS</button>-->
+			{% if fbuser %}
+			<br/>Facebook<br/>
+			<!--<button class="logoutnow">LOGOUT</button>-->
+			<fb:profile-pic id="facebook-profile-image" height="45px" width="45px" uid={{fbuser.facebook_id}} linked="false" ></fb:profile-pic> 
+			<br/>
+			<div class="logoutnow" href="" style="text-decoration:underline;">logout</div>
+			{% else %}
+			<img id="facebook-login" src="{% url static 'images/facebook-button.png' %}"/>
+			{% endif %}
+		</div>
+
+		<div id="overlay-div-twitter-login">
+
+			{% if user %}
+			<br/>Twitter<br />
+			<img id="twitter-profile-image" src="{{user.profile_pic}}" />
+			<br/>
+			<a href="{% url tauth_logout %}?redirectArgs=overlayEQUALStrue" style="text-decoration:underline;">logout</a>
+			{% else %}
+			<a href="{% url tauth_login %}?redirectArgs=overlayEQUALStwitter"><img id="twitter-login" src="{% url static 'images/twitter-button.png' %}" /></a><br/><br/>
+			{% endif %}
+		</div>
+
+	</div>
+
+	<div id="overlay-div-content2-facebook" >
+		<div class="overlay-top">
+			<img src="{% url static 'images/step2-msg.png' %} ">
+		</div>
+		<div class="overlay-bot">
+			<div id="previous" class="previous"><img src="{% url static 'images/previous.png' %}"></div>
+			<div id="invite-progress"><img src="{% url static 'images/step2.png' %}"></div>
+			{%if fbuser %}
+			<!--<img id="facebook-feed-update" src="{%url static 'images/facebook-sinvite.png' %}">-->
+			<!--FB Back Button-->
+			<!--<div id="facebook-div-back"><img src="{% url static 'images/back.png' %}" id="facebook-back"></div>-->
+			<div id="facebook-div-feed-update"><img src="{% url static 'images/share.png' %}" id="facebook-feed-update"></div>
+			{% endif %}
+		</div>
+		<div id="facebook-top-msg">
+			<img src="{% url static 'images/facebook-share-msg.png' %}">
+		</div>
+		<textarea id="overlay-textarea-facebook">Join me at BlogWorld in Las Vegas, Oct 14-16. Use my {{campaign.percent}}% off coupon.</textarea>
+	</div>
+	
+	<div id="overlay-div-content2-twitter">
+		<div class="overlay-top">
+			<img src="{% url static 'images/step2-msg.png' %}">  
+		</div>
+		<div class="overlay-bot">
+			<div id="previous" class="previous"><img src="{% url static 'images/previous.png' %}"></div>
+			<div id="invite-progress"><img src="{% url static 'images/step2.png' %}"></div>
+			<div id="twitter-div-feed-update"><img src="{% url static 'images/share.png' %}" id="twitter-feed-update"></div>
+		</div>
+		<div id="twitter-top-msg">
+			<img src="{% url static 'images/twitter-share-msg.png' %}">
+		</div>
+		<textarea id="overlay-textarea-twitter" >Join me at BlogWorld in Las Vegas, Oct 14-16. Use my 20% off coupon.</textarea>
+	</div>
+	<div id="overlay-div-content3" >
+
+		<div class="overlay-top"><img src="{% url static 'images/step3-msg.png' %}">  
+
+		</div>
+		<div class="overlay-bot">
+			<div id="previous" class="previous">
+				<img src="{% url static 'images/previous.png' %}">
+			</div>
+			<div id="invite-progress"><ul><img src="{% url static 'images/step3.png' %}"></div>
+			<div id="okay"><img src="{% url static 'images/done.png' %}"></div>
+		</div>
+		
+			<BR /><BR />
+			<div id="code-msg">Thanks! You've shared your discount with your friends.<BR><BR>
+			Here’s your discount code:
+			</div>      	
+			
+			<div id="code"><p>{{campaign.code}}</p></div>
+
+	</div>
+
+</div>
+
+
+
+<div id="dets"> 
+{% block details %}
+	<div id="event-title">BlogWorld 2010 Panel Spotlight</div>
+	<div id="detsbg">
+		<div id="info">Blogging Super Panel Live Feedback</div> 
+		<div id="goog"><img src="{% url static 'images/speakers.png' %}"></div>
+		<p>Is your blog optimizing its potential to make money? Find out! This panel of the top money making bloggers of all time will spend a few hours reviewing your blogs live. So get there early and step up to the mic and be ready to have your blog picked apart by the pros who know.<br><br>
+			John Chow, JohnChow.com<br>
+			Darren Rowse, Problogger.com<br>
+			Jeremy Shoemaker, ShoeMoney.com<br>
+			Brian Clark, Copyblogger.com<br>
+			Zac Johnson, ZacJohnson.com
+		</p>
+		<div id="blogworld"><img src="{% url static 'images/blogworld.png' %}"></div>
+	</div>
+	<div id="detsfooter"><img src="{% url static 'images/look/pbot.png' %}"></div>
+{% endblock %}
+
+</div> 
+
+<div id="eventinfo"><b>Date:</b> {{date_label}} &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;<b>Time:</b> {{time_label}}<br>{{event.venue}} | {{event.venue_address}}</div>
+
+<div id="attendees">
+	<div id="msg">Interested Guests</div>
+
+
+	<br/><br/><br/><br/><br/><br/>
+	<div id="attendees_thumbs">
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		{% for attendee in attendees %} 
+
+		<a href="">
+			<img src="{{attendee.profile_pic}}" /> 
+		</a>
+		&nbsp;
+
+		{% endfor %}
+	</div>
+</div>
+
+</div>
+
+
+
+
+
+
 
 <iframe src ="{{campaign.url}}" width="100%" height="600" scrolling="auto">
   <p>Your browser does not support iframes.</p>
@@ -32,7 +209,296 @@
 
 <script>
 
+alert("hello");
+$("#invite-button-div").click(function(){
+	$("#invite_button").overlay().load();
+});       
+
+var contentView = 0;
+
+$("#invite_button").overlay({
+	expose: {
+		loadSpeed: 200,
+		color: 'gray',
+		opacity: 0.8
+	},
+	onLoad: function(event) {
+
+		// if twitter user logged in, show twitter page
+		{% if user and overlayTwitter %}
+		contentView = 2;
+		$('#overlay-div-content1').hide(); 
+		$('#overlay-div-content2-facebook').hide(); 
+		$('#overlay-div-content2-twitter').show();
+		$('#overlay-div-content3').hide();
+		{% else %} 	
+
+		// if fbuser logged in
+		{% if fbuser and overlayFacebook %}
+		contentView = 2;
+		$('#overlay-div-content1').hide(); 
+		$('#overlay-div-content2-facebook').show(); 
+		$('#overlay-div-content2-twitter').hide();
+		$('#overlay-div-content3').hide();	
+		{% else %} 
+
+		// show first view with facebook and twitter login buttons
+		{% if not user and not fbuser %}
+		contentView = 1;
+		$('#overlay-div-content1').show(); 
+		$('#overlay-div-content2-facebook').hide(); 
+		$('#overlay-div-content2-twitter').hide();
+		$('#overlay-div-content3').hide();
+		{% else %} 	
+
+		// if fbuser logged in
+		{% if fbuser %}
+		contentView = 2;
+		$('#overlay-div-content1').hide(); 
+		$('#overlay-div-content2-facebook').show(); 
+		$('#overlay-div-content2-twitter').hide();
+		$('#overlay-div-content3').hide();	
+		{% else %} 	
+
+		// if fbuser logged in
+		{% if user  %}
+		contentView = 2;
+		$('#overlay-div-content1').hide(); 
+		$('#overlay-div-content2-facebook').hide(); 
+		$('#overlay-div-content2-twitter').show();
+		$('#overlay-div-content3').hide();
+
+		{% endif %}
+		{% endif %}
+		{% endif %}
+		{% endif %}
+		{% endif %}
+	},
+	top: 170,
+	left: 250,
+});
+
+
+$('#facebook-profile-image').click(function(){
+	contentView = 2;
+	$('#overlay-div-content1').hide(); 
+	$('#overlay-div-content2-facebook').show(); 
+	$('#overlay-div-content2-twitter').hide();
+	$('#overlay-div-content3').hide();
+});
+
+
+$('#twitter-profile-image').click(function(){
+	contentView = 2;
+	$('#overlay-div-content1').hide(); 
+	$('#overlay-div-content2-facebook').hide(); 
+	$('#overlay-div-content2-twitter').show();
+	$('#overlay-div-content3').hide();
+});
+
+
+$('.previous').click(function(){
+	if (contentView == 2){
+
+		contentView = 1;
+		$('#overlay-div-content1').show();  
+		$('#overlay-div-content2-facebook').hide(); 
+		$('#overlay-div-content2-twitter').hide();
+		$('#overlay-div-content3').hide();
+
+	}
+	else if (contentView == 3) {
+		{% if user %}
+		contentView = 2;
+		$('#overlay-div-content1').hide(); 
+		$('#overlay-div-content2-facebook').hide(); 
+		$('#overlay-div-content2-twitter').show();
+		$('#overlay-div-content3').hide();
+		{% else %} 	
+
+		// if fbuser logged in
+		{% if fbuser %}
+		contentView = 2;
+		$('#overlay-div-content1').hide(); 
+		$('#overlay-div-content2-facebook').show(); 
+		$('#overlay-div-content2-twitter').hide();
+		$('#overlay-div-content3').hide();	
+		{% endif %}
+		{% endif %}
+	}
+});
+
+{% if overlay or overlayTrue or overlayFacebook or overlayTwitter%}
+$("#invite_button").overlay().load();
+{% endif %}
+
+FB.init({appId: '{{fbappid}}', status: true, cookie: true, xfbml: true});
+
+$("#twitter-feed-update").click(function() { 
+	contentView                                                 = 3;
+
+	$('#overlay-div-content1').hide(); 
+	$('#overlay-div-content2-facebook').hide(); 
+	$('#overlay-div-content2-twitter').hide(); 
+	$('#overlay-div-content3').show();
+
+	$.ajax({ url: '{% url event_tweet_invite event_id = campaign.id %}', 
+	dataType: "json", data: {message: $("#overlay-textarea-twitter").val(), shash: "{{hash}}", }, 
+	success: function(data){ $.get('{% url event_going event_id = campaign.id %}', 
+	function(data) { refreshAttendee(); }); }, 
+	beforeSend: function() { } 
+}); 
+});
+
+
+
+
+$("#facebook-feed-update").click(function(){
+	contentView                                           = 3;
+	$('#overlay-div-content1').hide(); 
+	$('#overlay-div-content2-facebook').hide();	 
+	$('#overlay-div-content2-twitter').hide();
+	$('#overlay-div-content3').show();
+
+	$.ajax({
+		url: '{% url event_facebook_update event_id          = campaign.id %}', 
+		dataType: "json",
+		data: {message: $("#overlay-textarea-facebook").val(), shash: "{{shash}}" },
+
+		success: function(data){
+			//alert("msg sent");
+		},
+		beforeSend: function() {
+			//alert("sending feed request");
+		}
+	});   
+
+});
+
+$("#status_button").click(function(){
+	FB.getLoginStatus(function(response) {
+		//alert("HAHA" + response + inspect(response));
+		if (response.session) {
+			// logged in and connected user, someone you know
+			alert("logged in ");
+		} else {
+			// no user session available, someone you dont know
+			alert("logged out");
+		}
+	});
+});
+
+
+
+
+
+var requiredPerms  = ['email','user_about_me','user_birthday','user_website', 'publish_stream'];
+$('#facebook-login').click(function(){
+	var fbcheck  = "{{fbuser}}";
+	FB.getLoginStatus(function(response) {
+		if (response.session) {
+			// logged in and connected user, someone you know
+			//alert("LOGGED IN");
+			if (fbcheck == "") {
+				FB.logout(function(response) { 
+					//window.location.href                            = "{% url facebook_logout_callback %}?redirectArgs=overlayEQUALStrue";
+				});
+			}
+		} else {
+			// no user session available, someone you dont know
+			//alert("LOGGED OUT");
+			facebook_login_click();
+		}
+
+	});
+});
+
+
+$('.logoutnow').click(function() 
+{
+	var options  = { path: '/', expires: -1 };
+	$.cookie("uid", null, options);
+	$.cookie("session_key", null, options);
+	$.cookie("secret", null, options);
+	$.cookie("expires", null, options);
+	$.cookie("base_domain", null, options);
+	$.cookie("access_token", null, options);
+	$.cookie("sig", null, options);
+
+	FB.getLoginStatus(function(response) {
+		if (response.session) {	
+			FB.logout(function(response) { 
+						window.location.href   = "{% url facebook_logout_callback %}?redirectArgs=overlayEQUALStrue";
+					});
+				}
+				else{
+					window.location.href  = "{% url facebook_logout_callback %}?redirectArgs=overlayEQUALStrue";
+				}
+	});
+});
+
+
+
+$("#invite_popup_close").bind('click', function() {
+	$('#invite_popup').hide();
+	$('#tweet_msg').html("");
+	ajax_loader_image();
+});
+
+$("#okay").click(function(){
+	$("#invite_button").overlay().close();
+});
+
+$("#tweet_invite_button").click(function(){
+	$.ajax({
+		url: '{% url event_tweet_invite event_id           = campaign.id %}', 
+		dataType: "json",
+		data: {data: $("#tweet_text").val(), 
+		invite_url: '{{invite_url}}'
+		//invite_id: {{invite_id}}
+	}, 
+	success: function(data){
+		$("#tweet_msg").html("Tweet Sent Succesfully");
+		$("#tweet_text").val(data["msg"]);
+	},
+	beforeSend: function() {
+		//$("#tweet_invite_button").attr("disabled","disabled");                               
+		$("#tweet_msg").html("<img width                   = '20' height='20' src='{% url static 'images/ajax-loader.gif' %} />Sending Tweet<img width='20' height='20' src='{% url static 'images/ajax-loader.gif' %}' />");
+	}
+});
+
+});
+
+
+});
+
+function refreshAttendee()
+{
+	var attendee_list = "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;";
+	$.getJSON('{% url attendees_list event_id = campaign.id %}', function(data){
+		$.each(data, function(index, attendee) {
+			attendee_list += '<img src= "'+attendee[0]+'">&nbsp&nbsp&nbsp';
+			if (index % 8==0 && index != 0)
+			{
+				attendee_list +='<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;';
+			}
+		});
+		$('#attendees_thumbs').html(attendee_list);
+	});
+}
+
+//default usage
+$("#overlay-textarea-twitter").charCount();
+({
+	allowed: 80,		
+	warning: 20,
+});
+$("#overlay-textarea-facebook").charCount();
+({
+	allowed: 80,		
+	warning: 20,
+});
 
 </script>
-
+<script type="text/javascript" src="{% url static 'javascript/jquery.animate-shadow.js' %}" ></script>
 {% endblock %}
