--- a/static/css/campaign_admin.css
+++ b/static/css/campaign_admin.css
@@ -2,7 +2,7 @@ div#admin_console {
     padding: 20px;			  
     text-align: left;
     width: 90%;
-    background-color: #CCCCFF;
+    #background-color: #CCCCFF;
     margin: auto;
 
     -moz-border-radius-topleft: 20px;
@@ -19,7 +19,7 @@ div#admin_console {
 }
 
 div#admin_console li{
-		  list-style: none;
+		 list-style: none;
 		 margin: 30px;	
 }
 
